// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Kbd checkGrammar 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkGrammar 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkGrammar 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkGrammar 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkHighlight 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd checkSpaces 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd className 1`] = `
<kbd
  className="uu5-bricks-kbd my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd content 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</kbd>
`;

exports[`UU5.Bricks.Kbd content 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</kbd>
`;

exports[`UU5.Bricks.Kbd content 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</kbd>
`;

exports[`UU5.Bricks.Kbd content 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</kbd>
`;

exports[`UU5.Bricks.Kbd controlled 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd controlled 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd controlled 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd controlled 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd default props 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd disabled 1`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</kbd>
`;

exports[`UU5.Bricks.Kbd disabled 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd disabled 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd disabled 4`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</kbd>
`;

exports[`UU5.Bricks.Kbd docKit examples UU5.Bricks.Kbd should render without crash 1`] = `
<kbd
  className="uu5-bricks-kbd"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Enter"
  />
</kbd>
`;

exports[`UU5.Bricks.Kbd dynamic 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd dynamic 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd dynamic 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd dynamic 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd hidden 1`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd hidden 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd hidden 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd hidden 4`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd id 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd ignoreHTML 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd mainAttrs 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd name 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd noIndex 1`] = `
<kbd
  className="uu5-bricks-kbd uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd noIndex 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd noIndex 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd noIndex 4`] = `
<kbd
  className="uu5-bricks-kbd uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd selected 1`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd selected 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd selected 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd selected 4`] = `
<kbd
  className="uu5-bricks-kbd uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd style 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd style 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd style 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd style 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd textCorrector 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd textCorrector 2`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd textCorrector 3`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd textCorrector 4`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Kbd tooltip 1`] = `
<kbd
  className="uu5-bricks-kbd"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
